# tree-sitter-bl

./: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
queries/: highlights.scm
server/: package-lock.json  package.json  server.js
src/: grammar.json  node-types.json  parser.c  scanner.c
tests/: anonymous_functions_callback.bl  any.bl  arguments.bl  arguments_default_value.bl  auto.bl  call_location.bl  comptime_arguments.bl  enum.bl  enum_flag.bl  field_access.bl  function.bl  mult_return.bl  nested_enum.bl  out  struct_init.bl  type_decomposition.bl  union.bl  variadic_argument.bl
